<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.instagram.mini.presenter.signin.SignInViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tvContinueWithGoogle"
                android:background="@drawable/bg_button_white_two_stroke"
                android:paddingStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="45dp"
                android:drawableStart="@drawable/ic_google"
                android:onClick="@{(view)->viewModel.signInByGoogle(view)}"
                android:orientation="horizontal"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/brownishGrey"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@+id/tvContinueWithFacebook"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/tvContinueWithFacebook"
                android:background="@drawable/bg_button_white_two_stroke"
                android:paddingStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="45dp"
                android:drawableStart="@drawable/ic_facebook"
                android:onClick="@{(view)->viewModel.signInByFacebook(view)}"
                android:orientation="horizontal"
                android:text="@string/sign_in_with_facebook"
                android:textColor="@color/brownishGrey"
                android:textSize="16sp"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/tvContinueWithGoogle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/sign_in_or"
                android:textSize="14sp"
                android:textColor="@color/brownGrey"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/tvContinueWithFacebook"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/leftOrLine"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="34dp"
                android:background="@color/silver"
                app:layout_constraintBottom_toBottomOf="@+id/tvOr"
                app:layout_constraintEnd_toStartOf="@+id/tvOr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvOr" />

            <View
                android:id="@+id/rightOrLine"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="34dp"
                android:background="@color/silver"
                app:layout_constraintBottom_toBottomOf="@+id/tvOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvOr"
                app:layout_constraintTop_toTopOf="@+id/tvOr" />

            <LinearLayout
                android:id="@+id/llForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvOr"
                android:orientation="vertical"
                android:paddingStart="18dp"
                android:paddingTop="30dp"
                android:paddingEnd="18dp"
                android:paddingBottom="34dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etUserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_username_or_email"
                    app:errorText="@{viewModel.errorUserIdString}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:lines="1"
                        android:saveEnabled="false"
                        android:text="@={viewModel.userIdString}"
                        android:textColor="@color/slate"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_in_password"
                    android:layout_marginTop="20dp"
                    app:passwordToggleEnabled="true"
                    app:errorText="@{viewModel.errorPasswordString}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:saveEnabled="false"
                        android:text="@={viewModel.passwordString}"
                        android:textColor="@color/slate"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForgotPasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:onClick="@{(view)->viewModel.goToForgotPassword(view)}"
                    android:text="@string/sign_in_forgot_password"
                    android:textColor="@color/primary"
                    android:textSize="13sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    android:background="@drawable/bg_button_primary_solid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:onClick="@{(view)->viewModel.signIn(view)}"
                    android:text="@string/sign_in_btn_submit"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnFingerPrint"
                    android:background="@drawable/bg_button_primary_stroke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{(view)->viewModel.signInFingerprint(view)}"
                    android:text="@string/sign_in_btn_fingerprint"
                    android:textAllCaps="false"
                    android:textColor="@color/primary"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvForm">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/sign_in_dont_have_account"
                        android:textColor="@color/brownishGrey" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/sign_in_register"
                        android:textColor="@color/primary"
                        android:onClick="@{(view)->viewModel.goToRegister(view)}"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>